--- a/gridPractice.css
+++ b/gridPractice.css
@@ -41,3 +41,20 @@ display: flex;
 align-items: center;
 justify-content: center;
 border-radius: 5px;}
+.gallery {
+display: grid;
+grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+gap: 15px;
+}
+.gallery-item {
+background-color: #2196f3;
+color: white;
+padding: 60px;
+text-align: center;
+border-radius: 5px;
+transition: transform 0.3s;
+}
+.gallery-item:hover:hover {
+transform:
+scale(1.05);
+}
